--- a/meroghar/src/styles/globals.css
+++ b/meroghar/src/styles/globals.css
@@ -10,6 +10,7 @@
     font-family:'Airbnb Cereal', sans-serif;
     scroll-behavior: smooth;
     color:black;
+    letter-spacing:0.5px;
     
   }
 
